Code Base/objects/Part_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic Item~E</fullName>
                </value>
                <value>
                    <fullName>Mechanical Item~M</fullName>
                </value>
                <value>
                    <fullName>Consumables~C</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous~MS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Make_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Make/Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Part Details</relationshipLabel>
        <relationshipName>Part_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MeasurementUnit__c</fullName>
        <label>Measurement Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>nos</fullName>
                </value>
                <value>
                    <fullName>mm</fullName>
                </value>
                <value>
                    <fullName>gms</fullName>
                </value>
                <value>
                    <fullName>ltr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parameter_Name_1__c</fullName>
        <label>Parameter Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameter_Name_2__c</fullName>
        <label>Parameter Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameter_Name_3__c</fullName>
        <label>Parameter Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameter_Value_1__c</fullName>
        <label>Parameter Value 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameter_Value_2__c</fullName>
        <label>Parameter Value 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameter_Value_3__c</fullName>
        <label>Parameter Value 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Code__c</fullName>
        <description>This field will have the part code that was generated from the parameter values.</description>
        <label>Part Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <formula>IF(NOT(ISBLANK(Parameter_Value_1__c)) , LEFT(Parameter_Value_1__c,FIND(&quot;~&quot;,Parameter_Value_1__c)-1),&apos;&apos;)+
IF(ISBLANK(Parameter_Value_2__c), &apos; &apos;, &apos; / &apos;) +
IF(NOT(ISBLANK(Parameter_Value_2__c)) , LEFT(Parameter_Value_2__c,FIND(&quot;~&quot;,Parameter_Value_2__c)-1),&apos;&apos;)+
IF(ISBLANK(Parameter_Value_3__c), &apos; &apos;, &apos; / &apos;) +
IF(NOT(ISBLANK(Parameter_Value_3__c)) , LEFT(Parameter_Value_3__c,FIND(&quot;~&quot;,Parameter_Value_3__c)-1),&apos;&apos;)+
IF(ISBLANK(Parameter_Value_4__c), &apos; &apos;, &apos; / &apos;) +
IF(NOT(ISBLANK(Parameter_Value_4__c)) , LEFT(Parameter_Value_4__c,FIND(&quot;~&quot;,Parameter_Value_4__c)-1),&apos;&apos;)+
IF(ISBLANK(Parameter_Value_5__c), &apos; &apos;, &apos; / &apos;) +
IF(NOT(ISBLANK(Parameter_Value_5__c)) , LEFT(Parameter_Value_5__c,FIND(&quot;~&quot;,Parameter_Value_5__c)-1),&apos;&apos;)+
IF(ISBLANK(Parameter_Value_6__c), &apos; &apos;, &apos; / &apos;) +
IF(NOT(ISBLANK(Parameter_Value_6__c)) , LEFT(Parameter_Value_6__c,FIND(&quot;~&quot;,Parameter_Value_6__c)-1),&apos;&apos;)+
IF(ISBLANK(Parameter_Value_7__c), &apos; &apos;, &apos; / &apos;) +
IF(NOT(ISBLANK(Parameter_Value_7__c)) , LEFT(Parameter_Value_7__c,FIND(&quot;~&quot;,Parameter_Value_7__c)-1),&apos;&apos;)+
IF(ISBLANK(Parameter_Value_8__c), &apos; &apos;, &apos; / &apos;) +
IF(NOT(ISBLANK(Parameter_Value_8__c)) , LEFT(Parameter_Value_8__c,FIND(&quot;~&quot;,Parameter_Value_8__c)-1),&apos;&apos;)</formula>
        <label>Part Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Base~BSE</fullName>
                </value>
                <value>
                    <fullName>Book~BOOK</fullName>
                </value>
                <value>
                    <fullName>Capacitor~CC</fullName>
                </value>
                <value>
                    <fullName>Cleaning Agent~CLA</fullName>
                </value>
                <value>
                    <fullName>Component~CPT</fullName>
                </value>
                <value>
                    <fullName>Conformal Coating~CMCT</fullName>
                </value>
                <value>
                    <fullName>Connector~CN</fullName>
                </value>
                <value>
                    <fullName>Core~CRE</fullName>
                </value>
                <value>
                    <fullName>Cover~CVR</fullName>
                </value>
                <value>
                    <fullName>Diode~DI</fullName>
                </value>
                <value>
                    <fullName>Encapsulation / Adhesives~ECP</fullName>
                </value>
                <value>
                    <fullName>Fastener~FSR</fullName>
                </value>
                <value>
                    <fullName>Integrated Chip~IC</fullName>
                </value>
                <value>
                    <fullName>O-Ring~OR</fullName>
                </value>
                <value>
                    <fullName>Packing Box~PBX</fullName>
                </value>
                <value>
                    <fullName>Packing Materials~PCK</fullName>
                </value>
                <value>
                    <fullName>Plate~PLT</fullName>
                </value>
                <value>
                    <fullName>Potting Materials~PTMLS</fullName>
                </value>
                <value>
                    <fullName>Printed Circuit Board~PC</fullName>
                </value>
                <value>
                    <fullName>Resistor~RE</fullName>
                </value>
                <value>
                    <fullName>Sheet~ST</fullName>
                </value>
                <value>
                    <fullName>Sleeve~SLV</fullName>
                </value>
                <value>
                    <fullName>Solder~SDR</fullName>
                </value>
                <value>
                    <fullName>Solder Flux~FLX</fullName>
                </value>
                <value>
                    <fullName>Sticker~STK</fullName>
                </value>
                <value>
                    <fullName>Switch~SW</fullName>
                </value>
                <value>
                    <fullName>Tape~TPE</fullName>
                </value>
                <value>
                    <fullName>Transipad~TSP</fullName>
                </value>
                <value>
                    <fullName>Transistor~TR</fullName>
                </value>
                <value>
                    <fullName>Trimpot~TP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Part Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Part_Description__c</columns>
        <columns>MeasurementUnit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPECS-{00000}</displayFormat>
        <label>Part Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ParamValue1_Format</fullName>
        <active>true</active>
        <description>This validation rule is to ensure that the user enters the parameter value as expected.</description>
        <errorConditionFormula>AND(Parameter_Value_1__c != NULL,OR( NOT CONTAINS(Parameter_Value_1__c, &quot;~&quot;),LEN(RIGHT(Parameter_Value_1__c,LEN(Parameter_Value_1__c)-FIND(&quot;~&quot;,Parameter_Value_1__c)))&lt;1, FIND(&quot;~&quot;,Parameter_Value_1__c) &lt;2 ))</errorConditionFormula>
        <errorDisplayField>Parameter_Value_1__c</errorDisplayField>
        <errorMessage>Please follow the format &lt;paramDesc&gt;~&lt;paramCode&gt;. Eg: Fixed~F</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ParamValue2_Format</fullName>
        <active>true</active>
        <description>This validation rule is to ensure that the user enters the parameter value as expected.</description>
        <errorConditionFormula>AND(Parameter_Value_2__c != NULL,OR( NOT CONTAINS(Parameter_Value_2__c, &quot;~&quot;),LEN(RIGHT(Parameter_Value_2__c,LEN(Parameter_Value_2__c)-FIND(&quot;~&quot;,Parameter_Value_2__c)))&lt;1, FIND(&quot;~&quot;,Parameter_Value_2__c) &lt;2 ))</errorConditionFormula>
        <errorDisplayField>Parameter_Value_2__c</errorDisplayField>
        <errorMessage>Please follow the format &lt;paramDesc&gt;~&lt;paramCode&gt;. Eg: Fixed~F</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ParamValue3_Format</fullName>
        <active>true</active>
        <description>This validation rule is to ensure that the user enters the parameter value as expected.</description>
        <errorConditionFormula>AND(Parameter_Value_3__c != NULL,OR( NOT CONTAINS(Parameter_Value_3__c, &quot;~&quot;),LEN(RIGHT(Parameter_Value_3__c,LEN(Parameter_Value_3__c)-FIND(&quot;~&quot;,Parameter_Value_3__c)))&lt;1, FIND(&quot;~&quot;,Parameter_Value_3__c) &lt;2 ))</errorConditionFormula>
        <errorDisplayField>Parameter_Value_3__c</errorDisplayField>
        <errorMessage>Please follow the format &lt;paramDesc&gt;~&lt;paramCode&gt;. Eg: Fixed~F</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ParamValue4_Format</fullName>
        <active>true</active>
        <description>This validation rule is to ensure that the user enters the parameter value as expected.</description>
        <errorConditionFormula>AND(Parameter_Value_4__c != NULL,OR( NOT CONTAINS(Parameter_Value_4__c, &quot;~&quot;),LEN(RIGHT(Parameter_Value_4__c,LEN(Parameter_Value_4__c)-FIND(&quot;~&quot;,Parameter_Value_4__c)))&lt;1, FIND(&quot;~&quot;,Parameter_Value_4__c) &lt;2 ))</errorConditionFormula>
        <errorDisplayField>Parameter_Value_4__c</errorDisplayField>
        <errorMessage>Please follow the format &lt;paramDesc&gt;~&lt;paramCode&gt;. Eg: Fixed~F</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ParamValue5_Format</fullName>
        <active>true</active>
        <description>This validation rule is to ensure that the user enters the parameter value as expected.</description>
        <errorConditionFormula>AND(Parameter_Value_5__c != NULL,OR( NOT CONTAINS(Parameter_Value_5__c, &quot;~&quot;),LEN(RIGHT(Parameter_Value_5__c,LEN(Parameter_Value_5__c)-FIND(&quot;~&quot;,Parameter_Value_5__c)))&lt;1, FIND(&quot;~&quot;,Parameter_Value_5__c) &lt;2 ))</errorConditionFormula>
        <errorDisplayField>Parameter_Value_5__c</errorDisplayField>
        <errorMessage>Please follow the format &lt;paramDesc&gt;~&lt;paramCode&gt;. Eg: Fixed~F</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ParamValue6_Format</fullName>
        <active>true</active>
        <description>This validation rule is to ensure that the user enters the parameter value as expected.</description>
        <errorConditionFormula>AND(Parameter_Value_6__c != NULL,OR( NOT CONTAINS(Parameter_Value_6__c, &quot;~&quot;),LEN(RIGHT(Parameter_Value_6__c,LEN(Parameter_Value_6__c)-FIND(&quot;~&quot;,Parameter_Value_6__c)))&lt;1, FIND(&quot;~&quot;,Parameter_Value_6__c) &lt;2 ))</errorConditionFormula>
        <errorDisplayField>Parameter_Value_6__c</errorDisplayField>
        <errorMessage>Please follow the format &lt;paramDesc&gt;~&lt;paramCode&gt;. Eg: Fixed~F</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ParamValue7_Format</fullName>
        <active>true</active>
        <description>This validation rule is to ensure that the user enters the parameter value as expected.</description>
        <errorConditionFormula>AND(Parameter_Value_7__c != NULL,OR( NOT CONTAINS(Parameter_Value_7__c, &quot;~&quot;),LEN(RIGHT(Parameter_Value_7__c,LEN(Parameter_Value_7__c)-FIND(&quot;~&quot;,Parameter_Value_7__c)))&lt;1, FIND(&quot;~&quot;,Parameter_Value_7__c) &lt;2 ))</errorConditionFormula>
        <errorDisplayField>Parameter_Value_7__c</errorDisplayField>
        <errorMessage>Please follow the format &lt;paramDesc&gt;~&lt;paramCode&gt;. Eg: Fixed~F</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ParamValue8_Format</fullName>
        <active>true</active>
        <description>This validation rule is to ensure that the user enters the parameter value as expected.</description>
        <errorConditionFormula>AND(Parameter_Value_8__c != NULL,OR( NOT CONTAINS(Parameter_Value_8__c, &quot;~&quot;),LEN(RIGHT(Parameter_Value_8__c,LEN(Parameter_Value_8__c)-FIND(&quot;~&quot;,Parameter_Value_8__c)))&lt;1, FIND(&quot;~&quot;,Parameter_Value_8__c) &lt;2 ))</errorConditionFormula>
        <errorDisplayField>Parameter_Value_8__c</errorDisplayField>
        <errorMessage>Please follow the format &lt;paramDesc&gt;~&lt;paramCode&gt;. Eg: Fixed~F</errorMessage>
    </validationRules>
</CustomObject>